--- a/src/main/resources/templates/fragments/headerinc.html
+++ b/src/main/resources/templates/fragments/headerinc.html
@@ -4,6 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <script type="text/javascript" src="../static/js/jquery.min.js"
 	th:src="@{/js/jquery.min.js}"></script>
+	<script type="text/javascript" src="../static/js/renderjson.js"
+	th:src="@{/js/renderjson.js}"></script>
 <script type="text/javascript" src="../static/js/app.js"
 	th:src="@{/js/app.js}"></script>
 
