--- a/src/main/resources/templates/fragments/searchAncestors.html
+++ b/src/main/resources/templates/fragments/searchAncestors.html
@@ -4,6 +4,9 @@
 <head lang="en">
 <script type="text/javascript" src="../static/js/jquery.min.js"
 	th:src="@{/js/jquery.min.js}"></script>
+<script type="text/javascript" src="../static/js/renderjson.js"
+	th:src="@{/js/renderjson..js}"></script>
+
 <script type="text/javascript" src="../static/js/app.js"
 	th:src="@{/js/app.js}"></script>
 <link rel="stylesheet" type="text/css" href="../static/css/app.css" />
@@ -42,9 +45,9 @@
 				</fieldset>
 			</form>
 			<div class="row">
-					<div id="search_ancestors_result" class="col-md-6 col-md-offset-3">
-						THE RESUT WILL BE DISPLAYED HERE</div>
-				</div>
+				<div id="search_ancestors_result" class="col-md-6 col-md-offset-3">
+					THE RESUT WILL BE DISPLAYED HERE</div>
+			</div>
 		</div>
 	</div>
 </body>
