--- a/src/main/resources/templates/fragments/searchPerson.html
+++ b/src/main/resources/templates/fragments/searchPerson.html
@@ -4,6 +4,8 @@
 <head lang="en">
 <script type="text/javascript" src="../static/js/jquery.min.js"
 	th:src="@{/js/jquery.min.js}"></script>
+<script type="text/javascript" src="../static/js/renderjson.js"
+	th:src="@{/js/renderjson.js}"></script>
 <script type="text/javascript" src="../static/js/app.js"
 	th:src="@{/js/app.js}"></script>
 <link rel="stylesheet" type="text/css" href="../static/css/app.css" />
@@ -82,7 +84,7 @@
 						<div class="col-md-4">
 							<input id="edit_person_gender" name="search_person_gender"
 								placeholder="person gender" class="form-control input-md"
-								 type="text">
+								type="text">
 						</div>
 					</div>
 
